# root_seeker

./: .dockerignore  .env.example  .gitignore  README.en.md  README.md  config.example.yaml  main.py  pyproject.toml
config/: qdrant_config.yaml
docs/: CHANGELOG_v2.0.0.md  CHANGELOG_v3.0.0.md  CODE_REVIEW_CHECKLIST.md  Cline参考_上下文发现与MCP流程.md  DESIGN_AND_REQUIREMENTS.md  DIFY_MIGRATION_PLAN.md  DIFY_PLUGIN_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  Dify多轮对话LLM.md  Hook体系说明.md  IMPLEMENTATION_STATUS.md  INSTALL_DEPENDENCIES.md  LANGCHAIN_MIGRATION_PLAN.md  LLM_INTERACTION.md  LLM_MULTI_TURN_IMPLEMENTATION.md  LLM_MULTI_TURN_OPTIMIZATION.md  LOG_CHAIN_ENRICHMENT.md  PORTS_AND_ENDPOINTS.md  PROJECT_STRUCTURE.md  REPO_SYNC_AND_INDEX_ANALYSIS.md  Void参考_上下文发现与AI驱动.md  WEBADMIN_RUOYI_ARCHITECTURE.md  Web管理端分析.md  Web管理端若依架构.md  callback-integration.md  design_v2.0.0.md  v2.0.0_实施检查清单.md  v2.0.0_提示词与实现差异.md  v2.0.0_测试计划.md  v2.0.0_详细Review与修复.md  事件流.md  仓库同步与索引分析.md  代开发清单_v3.x.md  代码审查清单.md  优化清单.md  发布说明_v1.0.0.md  安装依赖.md  差距分析.md  提示词计划_v2.0.0.md  提示词计划_v3.0.0.md  (+9 more)
root_seeker/: app.py  config.py  config_db.py  config_reader.py  domain.py  events.py  ingest.py  prompts.py  protocols.py  security.py  sql_templates.py  utils.py
root_seeker_docker/: Dockerfile  Dockerfile.admin  Dockerfile.lsp  Dockerfile.zoekt  README.md  config.docker.yaml  daemon.cn-mirror.json  daemon.json.example  docker-compose.pull.yml  docker-compose.yml  docker-mirror-config.md  merge_config.py  setup-docker-mirror.ps1  start.ps1  start.sh  sync-sql.ps1  sync-sql.sh
ruoyi-rootseeker-admin/: pom.xml  (+3 more)
(+263 files in other folders)
